kubernetes/base/security/network-policies/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: default-deny
  namespace: microservices

spec:
  podSelector: {}

  policyTypes:
    - Ingress
