kubernetes/base/security/network-policies/gateway-to-user.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: gateway-to-user
  namespace: microservices

spec:
  podSelector:
    matchLabels:
      app: user-service

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: gateway

      ports:
        - protocol: TCP
          port: 3001
