kubernetes/base/security/network-policies/istio-ingress-to-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: istio-ingress-to-frontend
  namespace: microservices

spec:
  podSelector:
    matchLabels:
      app: frontend

  policyTypes:
    - Ingress

  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: istio-system
          podSelector:
            matchLabels:
              istio: ingressgateway
      ports:
        - protocol: TCP
          port: 80
